[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbl-domainrunner-governance-failure"
version = "0.2.0"
description = "Domainrunner demo: witness AI governance failure and DBL prevention"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "httpx>=0.27",
  "rich>=13.0",
]

[project.scripts]
domainrunner = "domainrunner.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["domainrunner*"]
